(library
 (name protocols)
 (public_name protocols)
 (flags :standard -short-paths)
 (inline_tests)
 (library_flags -linkall)
 (libraries core async_rpc_kernel non_empty_list envelope cache_lib snark_work_lib currency async
   pipe_lib logger with_hash unix_timestamp rose_tree truth
   ppx_deriving_yojson.runtime yojson proof_carrying_data trust_system)
 (preprocess
  (pps ppx_jane ppx_coda ppx_deriving.eq ppx_deriving_yojson))
 (synopsis "Lib powering the client interactions with the daemon"))
